--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,11 @@
-title: Your awesome title
-author: GitHub User
-email: your-email@domain.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+title: Laffa Neosia
+author: Laffa6
+email: laffa6@domain.com
+description: Web Developper junior 
 
 # social links
-twitter_username: your-twitter-handle
-github_username:  your-github-handle
+twitter_username: @Laffa6
+github_username:  https://github.com/Laffa6
 
 show_excerpts: true # set to false to remove excerpts on the homepage
+theme: minima
